(feat) Change to prisma, Add CRUD sample
