# apps/koa-app/src/assets/swagger.yaml
@@ -5,18 +5,18 @@ components:
     requestBodies: {}
     responses: {}
     schemas:
-        Area:
+        area:
             properties:
+                area:
+                    type: string
                 id:
                     type: number
                     format: double
-                area:
-                    type: string
             required:
-                - id
                 - area
+                - id
             type: object
-            additionalProperties: false
+            description: 'Model area'
         AreaDto:
             properties:
                 id:
@@ -30,7 +30,11 @@ components:
                 - area
             type: object
             additionalProperties: false
-    securitySchemes: {}
+    securitySchemes:
+        bearer_auth:
+            type: http
+            scheme: bearer
+            bearerFormat: Bearer
 info:
     title: exp
     version: 0.0.0
@@ -41,24 +45,149 @@ openapi: 3.0.0
 paths:
     /area:
         post:
-            operationId: Save
+            operationId: Create
             responses:
                 '200':
                     description: Ok
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Area'
+                                $ref: '#/components/schemas/area'
             tags:
                 - Area
             security:
-                - api_key: []
+                -
+                    bearer_auth: []
             parameters: []
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/AreaDto'
+                            anyOf:
+                                -
+                                    $ref: '#/components/schemas/AreaDto'
+                                - {}
+        put:
+            operationId: Update
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/area'
+            tags:
+                - Area
+            security:
+                -
+                    bearer_auth: []
+            parameters: []
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            anyOf:
+                                -
+                                    $ref: '#/components/schemas/AreaDto'
+                                - {}
+    '/area/{perPage}/{lastId}/{sort}':
+        get:
+            operationId: List
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                properties:
+                                    model: {items: {$ref: '#/components/schemas/area'}, type: array}
+                                    perPage: {type: number, format: double}
+                                    total: {type: number, format: double}
+                                required:
+                                    - model
+                                    - perPage
+                                    - total
+                                type: object
+            tags:
+                - Area
+            security:
+                -
+                    bearer_auth: []
+            parameters:
+                -
+                    in: path
+                    name: perPage
+                    required: true
+                    schema:
+                        format: double
+                        type: number
+                -
+                    in: path
+                    name: lastId
+                    required: true
+                    schema:
+                        format: double
+                        type: number
+                -
+                    in: path
+                    name: sort
+                    required: true
+                    schema:
+                        format: double
+                        type: number
+                -
+                    in: query
+                    name: search
+                    required: false
+                    schema:
+                        type: string
+    '/area/{id}':
+        get:
+            operationId: View
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/area'
+            tags:
+                - Area
+            security:
+                -
+                    bearer_auth: []
+            parameters:
+                -
+                    in: path
+                    name: id
+                    required: true
+                    schema:
+                        format: double
+                        type: number
+        delete:
+            operationId: Delete
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/area'
+            tags:
+                - Area
+            security:
+                -
+                    bearer_auth: []
+            parameters:
+                -
+                    in: path
+                    name: id
+                    required: true
+                    schema:
+                        format: double
+                        type: number
 servers:
-    - url: /
+    -
+        url: /
